实验：两路PWM，两路ADC DMA，PWM中间触发回调函数，通过串口输出两路ADC值

--- a/source/source.ioc
+++ b/source/source.ioc
@@ -1,47 +1,68 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.ContinuousConvMode=DISABLE
+ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.ContinuousConvMode=ENABLE
 ADC1.EnableInjectedConversion=DISABLE
 ADC1.EnableRegularConversion=ENABLE
-ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_CC1
-ADC1.IPParameters=master,EnableRegularConversion,ContinuousConvMode,EnableInjectedConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,NbrOfConversionFlag,InjNumberOfConversion,ExternalTrigConv
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.IPParameters=EnableRegularConversion,ContinuousConvMode,EnableInjectedConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,NbrOfConversionFlag,InjNumberOfConversion,ExternalTrigConv,NbrOfConversion,master,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion
 ADC1.InjNumberOfConversion=1
+ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-11\#ChannelRegularConversion=1
+ADC1.Rank-12\#ChannelRegularConversion=2
 ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IPNb=5
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB3
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PA9
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB3
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA5
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=13
+Mcu.Pin6=PA6
+Mcu.Pin7=PB10
+Mcu.Pin8=PB11
+Mcu.Pin9=PA8
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.2.1
 MxDb.Version=DB.6.0.21
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -51,16 +72,21 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA5.Signal=ADCx_IN5
+PA6.Signal=ADCx_IN6
 PA8.Signal=S_TIM1_CH1
 PA9.Signal=S_TIM1_CH2
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
@@ -103,7 +129,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -128,6 +154,8 @@ RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN5.0=ADC1_IN5,IN5
 SH.ADCx_IN5.ConfNb=1
+SH.ADCx_IN6.0=ADC1_IN6,IN6
+SH.ADCx_IN6.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
@@ -136,14 +164,15 @@ TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
-TIM1.IPParameters=Prescaler,Period,AutoReloadPreload,CounterMode,TIM_MasterOutputTrigger,RepetitionCounter,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,OCMode_PWM-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Pulse-PWM Generation2 CH2
-TIM1.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM1
+TIM1.IPParameters=Prescaler,Period,CounterMode,AutoReloadPreload,TIM_MasterOutputTrigger,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,RepetitionCounter
 TIM1.Period=99
-TIM1.Prescaler=35
-TIM1.Pulse-PWM\ Generation1\ CH1=8
+TIM1.Prescaler=3599
+TIM1.Pulse-PWM\ Generation1\ CH1=38
 TIM1.Pulse-PWM\ Generation2\ CH2=58
-TIM1.RepetitionCounter=0
-TIM1.TIM_MasterOutputTrigger=TIM_TRGO_OC1
+TIM1.RepetitionCounter=1
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
